[package]
name = "bowery"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/backwardspy/bowery"

[dependencies]
bevy = "0.11.3"

[features]
# use --no-default-features for release build
default = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.3.1"
ci = ["github"]
installers = []
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
